layout issues still not fixed

--- a/Front-End/my-app/src/Components/Cards.css
+++ b/Front-End/my-app/src/Components/Cards.css
@@ -19,7 +19,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
     overflow: hidden;
     height: 200px;
     margin-left: auto;
